# ucon

./: COPYING  Makefile  Makefile.am  Makefile.am0  Makefile.in  Makefile.in-  Makefile.man  Makefile.man-  README.md  ___ucon.bep  __error  __m  __ma  __mi  __sleep_echo_pts4  __test_ucon  __test_ucon.log0  __todo.md  __todo.txt  _arc  _autotools  _c_255columns  _c_debug  _c_disable_imj  _c_screenshot  _clear_screen_shots  _cm_all_patterns  _cmi  _cppcheck  _cppcheck.out  _diff.txt  _diff_bak  _diff_myutf8  _diff_old  _dist_clean  _fill_fb  _gen_bep  _gen_dep  _install_build-essential.sh  _install_dev_tools.sh  (+61 more)
.deps/: fbbpp.Po  fbcommon.Po  font.Po  hex.Po  main.Po  message.Po  mydebug.Po  myminmax.Po  mystring.Po  myutf8.Po  pen.Po  picofont.Po  term.Po  util.Po  vterm.Po  vtermlow.Po
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
fonts/: _diff_fonts  _import_fonts  fonts  ucon10.hex  ucon12.hex  ucon14.hex  ucon16.hex
fonts/fonts/: _txt2hex  _ucon12.hex  txt2hex  txt2hex.c  txt2hex.mk  ucon10.fnt  ucon10.hex
fonts/old/: _ucon10.hex  ucon10.hex  ucon12.hex  ucon14.hex  ucon16.hex
im/: Makefile  __imjcui.bep  __tmp.txt  _clear_history.sh  _cuim  _cuima  _cuit  _cuit_auto  _diff.txt  _diffold  _gen_bep  _imjqttest.pro  _install_dic_hst  _mk_symlink  _mqt  _mqta  _qm  _readme.txt  _test.txt  _todo.txt  _tqt  imj.cpp  imj.cpp0  imj.cpp140419  imj.cpp150119  imj.h  imjcui.cpp  imjcui.cpp0  imjcui.h  imjcuitest  imjcuitest.cpp  imjcuitest.mak  imjqt.cpp  imjqt.h  imjqt.ui  imjqttest  imjqttest.cpp  imjqttest.h  imjqttest.ui  imjqttestui.ui  (+21 more)
im/.imj/: imj.hst
im/.moc/: moc_imjqttestui.cpp  moc_imjqtui.cpp
im/.ui/: ui_imjqt.h  ui_imjqttest.h
im/canna-dic/: _conv_SKK-JISYO-zipcode_to_zipcode-dic.sh  _join_imj-dic_and_zipcode-dic.sh  canna-dic-tools-list.sh  canna-dic-tools-merge.sh  canna-dic-tools.rb  longest_line.rb
im/docs/: Canna-2257.txt
im/notused/: hantozen.txt  hiratokata.txt  zentohan.txt
scripts/: u  ucon10  ucon11  ucon12  ucon13  ucon14  ucon15  ucon16  ucon17  ucon20  ucon21  ucon22  ucon24  ucon25  ucon26  ucon28  ucon29  ucon30  ucon31  ucon32  ucon33  ucon34  ucon36  ucon37  ucon40  ucon42
testfiles/: DEC-special-graphics.txt  _GPL.txt  _ascii.txt  _kernel_menuconfig.sh  _test.txt  _test_16colors.sh  _test_24bitcolors.sh  _test_256colors.sh  _test_DEC-special-graphics.sh  _test_attributes.sh  _test_clear.sh  _test_cursor_pos.sh  _test_fb  _test_fb_loop  _test_progress  _test_report_seq.sh  _test_scroll_speed.sh  _test_scrolling.sh  _杜子春.txt  all-utf8.txt  chvt_loop  output_fb_data  output_fb_data_loop  output_fb_loop  surrogate-pair.txt  zenkaku-chars.txt  杜子春.txt  羅生門.txt  藪の中.txt  雨にも負けず.txt
